add header footer with styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,15 @@
-<h2 id="title">Welcome to Ember</h2>
+<header class='jumbotron main-bar' id="main">
+  <h1>The Ref Desk</h1>
+  <h3>(Who needs an MLIS degree when you have the internet...)</h3>
+</header>
 
 {{outlet}}
+<footer>
+  <nav class="navbar navbar-default navbar-fixed-bottom main-bar">
+    <ul class="nav nav-pills">
+      <li role="presentation"> Home</li>
+      <li role="presentation"> About</li>
+      <li role="presentation"> Contact</li>
+    </ul>
+  </nav>
+</footer>
