add some fun about page text

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,8 +7,8 @@
 <footer>
   <nav class="navbar navbar-default navbar-fixed-bottom main-bar">
     <ul class="nav nav-pills">
-      <li role="presentation"> Home</li>
-      <li role="presentation"> About</li>
+      <li role="presentation"> {{#link-to 'index'}}Home{{/link-to}}</li>
+      <li role="presentation"> {{#link-to 'about'}}About{{/link-to}}</li>
       <li role="presentation"> Contact</li>
     </ul>
   </nav>
