--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,1 +1,9 @@
-{{yield}}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{question.theQuestion}}</h3>
+  </div>
+  <div class="panel-body">
+    <h4>asked by {{question.asker}} on {{question.date}}</h4>
+    <h5>here goes trimmed context</h5>
+  </div>
+</div>
