--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">{{question.theQuestion}}</h3>
+    <h2 class="panel-title">{{question.theQuestion}}</h2>
   </div>
   <div class="panel-body">
-    <h4>asked by {{question.asker}} on {{question.date}}</h4>
-    <h5>here goes trimmed context</h5>
+    <h5>asked by {{question.asker}} on {{question.date}}</h5>
+    <p>{{question.inContext}}</p>
   </div>
 </div>
