--- a/app/templates/components/question-form.hbs
+++ b/app/templates/components/question-form.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
       <label for="inContext">Why are you Asking?</label>
-      {{input class="form-control" value=inContext id="inContext"}}
+      {{textarea rows="12" class="form-control" value=inContext id="inContext"}}
     </div>
     <button class="btn btn-lg btn-info" {{action 'askQuestion' question}}>ASK THE INTERNET</button>
   </form>
