--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h2 class="panel-title">{{question.theQuestion}}</h2>
+    <h2 class="panel-title">{{#link-to 'question' question.id}}{{question.theQuestion}}{{/link-to}}</h2>
   </div>
   <div class="panel-body">
     <h5>asked by {{question.asker}} on {{question.date}}</h5>
