--- a/app/templates/components/question-display.hbs
+++ b/app/templates/components/question-display.hbs
@@ -3,7 +3,11 @@
   <h2>{{question.theQuestion}}</h2>
   <h4>More info:</h4>
   <h5>{{question.inContext}}</h5>
+  <br>
+  <h4>Is this question dumb, irrelevant, asked-and-answered-elswhere? if so:</h4>
+  <button class="btn btn-danger btn-lg" {{action 'deleteQuestion' question}}>DELETE!</button>
 </div>
 <div class="container answerformhere">
   <h3>Google it For them and Tell them the Answer:</h3>
+
 </div>
