--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-5">
+    <div class="container col-md-5">
       <h2> The Question at Hand:</h2>
-      {{question-display question=model}}
+      {{question-display question=model deleteQuestion="deleteQuestion"}}
     </div>
-    <div class="col-md-7">
+    <div class="container col-md-7">
       <h2>What Ya'll think:</h2>
     </div>
   </div>
