--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -3,7 +3,7 @@
     <div class="container col-md-5">
       <h2> The Question at Hand:</h2>
       {{question-display question=model deleteQuestion="deleteQuestion"}}
-      {{answer-question saveAnswer="saveTheAnswer"}}
+      {{answer-question saveAnswer="saveTheAnswer" question=model}}
     </div>
     <div class="container col-md-7">
       <h2>What Ya'll think:</h2>
