add styling and fix layout on answer form

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,3 +10,10 @@
   background-color: #00e6e6;
   border-radius: 10px;
 }
+.footer{
+  margin-top: 60px;
+}
+.answer{
+  width: 100%;
+  background-color: grey;
+}
