--- a/app/templates/components/answer-question.hbs
+++ b/app/templates/components/answer-question.hbs
@@ -1,8 +1,12 @@
+
+  <h3>Google it For them and Tell them the Answer:</h3>
+
+
 <div class="container answer">
-  <form>
+  <form >
     <div class="form-group">
       <label for="answer">AFAIK The Answer Is:</label>
-      {{input class="form-control" type="text" value=answer id="answer"}}
+      {{textarea rows="12" class="form-control" type="text" value=answer id="answer"}}
     </div>
     <div class="form-group">
       <label  for="author">In the Expert Opinion Of:</label>
