add ability to delete answers and stay on page despite errors saying something is not a function

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,11 +5,11 @@
 
 {{outlet}}
 <footer>
-  <nav class="navbar navbar-default navbar-fixed-bottom main-bar">
+  <nav class="navbar navbar-default navbar-bottom main-bar">
     <ul class="nav nav-pills">
       <li role="presentation"> {{#link-to 'index'}}Home{{/link-to}}</li>
       <li role="presentation"> {{#link-to 'about'}}About{{/link-to}}</li>
-      <li role="presentation"> Contact</li>
+      <li role="presentation">{{#link-to 'contact'}} Contact{{/link-to}}</li>
     </ul>
   </nav>
 </footer>
