--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,19 +1,35 @@
 .main-bar{
   background-color: #00b3b3;
 }
+body{
+  background-color: #e6ccb3;
+}
 .struck{
   text-decoration: line-through;
   color: #333333;
 }
 .question {
-  width: 90%;
+  width: 100%;
   background-color: #00e6e6;
   border-radius: 10px;
 }
 .footer{
-  margin-top: 60px;
+  margin-top: 70px;
+  padding-top: 70px;
 }
 .answer{
   width: 100%;
-  background-color: grey;
+  background-color: #996433;
+  border-radius: 10px;
+}
+.panel-default{
+  background-color:  #996433;
+}
+.panel-header{
+  background-color: #996433;
+}
+.deleteQbutton{
+  width:90%;
+  color: red;
+  align: center;
 }
