--- a/app/templates/components/question-display.hbs
+++ b/app/templates/components/question-display.hbs
@@ -1,8 +1,11 @@
 
-  <h3>{{question.asker}} wants to know...</h3>
+  <h3><em>{{question.asker}}</em> wants to know...</h3>
   <h2>{{question.theQuestion}}</h2>
   <h4>More info:</h4>
   <h5>{{question.inContext}}</h5>
   <br>
-  <h4>Is this question dumb, irrelevant, asked-and-answered-elswhere? if so:</h4>
-  <button class="btn btn-danger btn-lg" {{action 'deleteQuestion' question}}>DELETE!</button>
+  <div class="container deleteQbutton">
+    <h4>Is this question dumb, irrelevant, asked-and-answered-elswhere? if so:</h4>
+    <button class="btn btn-danger btn-lg" {{action 'deleteQuestion' question}}>DELETE!</button>
+
+  </div>
