--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <!-- <div class="container"> -->
+      <div class="container question">
         <h2> The Question at Hand:</h2>
         {{question-display question=model deleteQuestion="deleteQuestion"}}
+      </div>
         {{answer-question saveAnswer="saveTheAnswer" question=model}}
-      <!-- </div> -->
     </div>
     <div class="col-md-7">
       <div class="container">
         <h2>What Ya'll think:</h2>
         {{#each model.answers as |answer|}}
-        {{answer-tile answer=answer}}
+        {{answer-tile answer=answer deleteAnswer="deleteAnswer" question=question}}
         {{/each}}
       </div>
     </div>
