--- a/app/templates/components/question-display.hbs
+++ b/app/templates/components/question-display.hbs
@@ -1,11 +1,14 @@
 
+<div class="container question2">
   <h3><em>{{question.asker}}</em> wants to know...</h3>
-  <h2>{{question.theQuestion}}</h2>
-  <h4>More info:</h4>
-  <h5>{{question.inContext}}</h5>
-  <br>
-  <div class="container deleteQbutton">
-    <h4>Is this question dumb, irrelevant, asked-and-answered-elswhere? if so:</h4>
+  <h2>"{{question.theQuestion}}"</h2>
+  <hr>
+  <h4>More information for Context:</h4>
+  <p>{{question.inContext}}</p>
+  <hr>
+</div>
+<div class="container deleteQbutton">
+    <h5>Is this question dumb, irrelevant, asked-and-answered-elswhere? if so:</h5>
     <button class="btn btn-danger btn-lg" {{action 'deleteQuestion' question}}>DELETE!</button>
 
-  </div>
+</div>
