--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -2,7 +2,7 @@
   <h2>Welcome to "The Ref Desk"!</h2>
   <h3>Who Needs Librarians Anyway!</h3>
   <h4>All the Answers Are On the Internet</h4>
-  <p>Welcome to "The Ref Desk."  Since the Sum total of Human Knowledge is on <span class='struck'>the Interntet</span> Google anyways, you can just ask anyone a question here and one of our <a href="http://youarenotsosmart.com/2015/11/25/yanss-063-how-search-engines-make-us-feel-smarter-than-we-really-are/">super smart</a>, <em>definitely probably qualified</em><a href="https://www.psychologytoday.com/blog/therapy-matters/201107/the-google-effect"> experts at googling</a> will give you a <em>totes legit</em> answer. You'll know it's true because it will fully be cited by close to 1 whole hyperlink! And because the crowd is super wise (so says some <a href="http://www.amazon.com/The-Wisdom-Crowds-James-Surowiecki/dp/0385721706">Clay Shirky</a> guy... I think.)</p>
+  <p>Welcome to "The Ref Desk."  Since the Sum total of Human Knowledge is on <span class='struck'>the Internet</span> Google anyways, you can just ask anyone a question here and one of our <a href="http://youarenotsosmart.com/2015/11/25/yanss-063-how-search-engines-make-us-feel-smarter-than-we-really-are/">super smart</a>, <em>definitely probably qualified</em><a href="https://www.psychologytoday.com/blog/therapy-matters/201107/the-google-effect"> experts at googling</a> will give you a <em>totes legit</em> answer. You'll know it's true because it will fully be cited by close to 1 whole hyperlink! And because the crowd is super wise (so says some <a href="http://www.amazon.com/The-Wisdom-Crowds-James-Surowiecki/dp/0385721706">Clay Shirky</a> guy... I think.)</p>
 
   <p>Ask Away! Experts are standing (more likely slouching in a chair) by!</p>
 </div>
