--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
 
 {{outlet}}
 <footer>
-  <nav class="navbar navbar-default navbar-bottom main-bar">
+  <nav class="navbar navbar-default navbar-fixed-bottom main-bar">
     <ul class="nav nav-pills">
       <li role="presentation"> {{#link-to 'index'}}Home{{/link-to}}</li>
       <li role="presentation"> {{#link-to 'about'}}About{{/link-to}}</li>
