add ability to edit questions

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -7,6 +7,9 @@
       </div>
         {{answer-question saveAnswer="saveTheAnswer" question=model}}
     </div>
+    <div>
+      {{edit-question question=model updateAsk="updateAsk"}}
+    </div>
     <div class="col-md-7">
       <div class="container">
         <h2>What Ya'll think:</h2>
