--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -31,6 +31,11 @@ body{
   background-color: #00b3b3;
   border-radius: 10px;
 }
+.question-edit {
+  width: 100%;
+  background-color: #00b3b3;
+  border-radius: 10px;
+}
 .navbar{
   margin-top: 70px;
 
