--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -4,18 +4,18 @@
       <div class="container question">
         <h2> The Question at Hand:</h2>
         {{question-display question=model deleteQuestion="deleteQuestion" }}
-      </div>
-
-        <div>
+        <div class="">
           {{edit-question question=model updateAsk="updateAsk"}}
         </div>
+      </div>
+
 
       <div>
         {{answer-question saveAnswer="saveTheAnswer" question=model}}
       </div>
     </div>
     <div class="col-md-7">
-      <div class="container">
+      <div class="container answer">
         <h2>What Ya'll think:</h2>
         {{#each model.answers as |answer|}}
         {{answer-tile answer=answer deleteAnswer="deleteAnswer" question=question}}
