--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -45,8 +45,12 @@ body{
   background-color: #996433;
   border-radius: 10px;
 }
+.panel{
+  width: 100%;
+}
 .panel-default{
   background-color:  #996433;
+
 }
 .panel-header{
   background-color: #996433;
