add contact information

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,11 @@
-{{outlet}}
+<h1>Don't Contact us, Contact a Librarian</h1>
+<ul>
+  <li><a href="https://www.loc.gov/rr/askalib/">Ask a Librarian: Library of Congress</a></li>
+<li><a href="http://liswiki.org/wiki/Chat_reference_libraries">List of Libraries with Chat Reference</a></li>
+<li><a href="https://multcolib.org/contact-librarian">Ask A Librarian (Multnomah County)</a></li>
+
+<li><a href="https://www.worldcat.org/libraries">Find A Library Near You</a></li>
+<li><a href="http://www.publiclibraries.com/">Public Libraries</a></li>
+
+
+</ul>
