--- a/app/templates/components/edit-question.hbs
+++ b/app/templates/components/edit-question.hbs
@@ -20,5 +20,5 @@
   </form>
 </div>
 {{else}}
-<button class="btn btn-primary btn-lg" {{action 'showUpdate'}}>UPDATE!</button>
+<button class="btn btn-primary btn-lg" {{action 'showUpdate'}}>UPDATE THE QUESTION!</button>
 {{/if }}
