--- a/app/templates/components/answer-question.hbs
+++ b/app/templates/components/answer-question.hbs
@@ -1,5 +1,5 @@
 
-  <h3>Google it For them and Tell them the Answer:</h3>
+  <h3>Google It for Them :</h3>
 
 
 <div class="container answer">
@@ -12,7 +12,7 @@
       <label  for="author">In the Expert Opinion Of:</label>
       {{input class="form-control" type="text" value=author id="author"}}
     </div>
-    
+
     <div class="form-group">
       <label for="whereGoogleSentMe">Where did Google Show you the Answer?(link)</label>
       {{input type="url" rows="12" class="form-control" value=whereGoogleSentMe id="whereGoogleSentMe"}}
