--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,15 +1,15 @@
 <header class='jumbotron main-bar' id="main">
   <h1>The Ref Desk</h1>
   <h3>(Who needs an MLIS degree when you have the internet...)</h3>
-</header>
-
-{{outlet}}
-<footer>
-  <nav class="navbar navbar-default navbar-fixed-bottom main-bar">
+  <nav class="navbar navbar-default  main-bar">
     <ul class="nav nav-pills">
       <li role="presentation"> {{#link-to 'index'}}Home{{/link-to}}</li>
       <li role="presentation"> {{#link-to 'about'}}About{{/link-to}}</li>
       <li role="presentation">{{#link-to 'contact'}} Contact{{/link-to}}</li>
     </ul>
   </nav>
+</header>
+
+{{outlet}}
+<footer>
 </footer>
