--- a/app/templates/components/edit-answer.hbs
+++ b/app/templates/components/edit-answer.hbs
@@ -14,9 +14,9 @@
       <label for="whereGoogleSentMe">Where'd your second Googling take you?(link)</label>
       {{input type="url" rows="12" class="form-control" value=whereGoogleSentMe id="newWhereGoogleSentMe" placeholder=answer.whereGoogleSentMe}}
     </div>
-    <button class="btn btn-lg btn-info" {{action 'updateAnswer' answer}}>Edit Your Knowledge</button>
+    <button class="btn btn-xs btn-info" {{action 'updateAnswer' answer}}>Edit Your Knowledge</button>
   </form>
 </div>
 {{else}}
-  <button {{action 'showUpdate' answer}}>Update</button>
+  <button class="btn btn-info btn-xs" {{action 'showUpdate' answer}}>Update</button>
 {{/if}}
