add computed property for hot and cold questions

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,8 +1,15 @@
 
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h1 class="panel-title">{{answer.author}} says:</h1>
-    <h2>{{rating}}  <button {{action 'likeAnswer' answer}} class="btn btn-xs btn-primary">like ({{answer.like}})</button><button {{action 'dislikeAnswer' answer}} class="btn btn-xs btn-danger">dislike ({{answer.dislike}})</button></h2>
+    <div class="row">
+      <div class=col-xs-6>
+
+        <h2 class="panel-title">{{answer.author}} says:</h2>
+      </div>
+      <div class="col-xs-6">
+        <h3>Rating: {{hot-cold rating}}</h3>  <button {{action 'likeAnswer' answer}} class="btn btn-xs btn-primary">like ({{answer.like}})</button><button {{action 'dislikeAnswer' answer}} class="btn btn-xs btn-danger">dislike ({{answer.dislike}})</button>
+      </div>
+    </div>
   </div>
   <div class="panel-body">
     <p>{{answer.answer}}<br><a href={{answer.whereGoogleSentMe}}>Source Citations</a> make it true.</p>
