adjust display and functionality of hot-cold helper and hotness computed property

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,6 +15,14 @@ body{
   text-shadow: 15px;
 
 }
+.hot {
+  color: red;
+  font-style: italic;
+}
+.cold{
+  color: blue;
+  font-style: oblique;
+}
 .100box{
   width: 100%;
 }
