get something working with a userName service

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,7 @@
   <nav class="navbar navbar-default  main-bar">
     <ul class="nav nav-pills">
       <li role="presentation"> {{#link-to 'index'}}Home{{/link-to}}</li>
+      <li role="presentation">{{#link-to 'login'}}Login(?){{/link-to}}</li>
       <li role="presentation"> {{#link-to 'about'}}About{{/link-to}}</li>
       <li role="presentation">{{#link-to 'contact'}} Contact{{/link-to}}</li>
     </ul>
