--- a/app/templates/components/question-form.hbs
+++ b/app/templates/components/question-form.hbs
@@ -1,5 +1,6 @@
 <div class="container question">
   <form>
+    <div> <h1>{{userName.theName.[0]}} </h1></div>
     <div class="form-group">
       <label for="theQuestion">What do you Want to know?</label>
       {{input class="form-control" type="text" value=theQuestion id="theQuestion"}}
@@ -8,7 +9,7 @@
       <label  for="asker">Who Are You?</label>
       {{input class="form-control" type="text" value=asker id="asker"}}
     </div>
-    
+
     <div class="form-group">
       <label for="inContext">Why are you Asking?</label>
       {{textarea rows="12" class="form-control" value=inContext id="inContext"}}
