--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -4,10 +4,10 @@
     <div class="row">
       <div class=col-xs-6>
 
-        <h2 class="panel-title">{{answer.author}} says:</h2>
+        <h2 class="panel-title"><strong>{{answer.author}}</strong><em> says</em>:</h2>
       </div>
       <div class="col-xs-6">
-        <h3>Rating: {{hot-cold rating hotness}}</h3>  <button {{action 'likeAnswer' answer}} class="btn btn-xs btn-primary">like ({{answer.like}})</button><button {{action 'dislikeAnswer' answer}} class="btn btn-xs btn-danger">dislike ({{answer.dislike}})</button>
+        <h3>Rating: {{hot-cold rating hotness}}</h3>  <button {{action 'likeAnswer' answer}} class="btn btn-xs btn-primary"><span class="glyphicon glyphicon-upload"> </span> like ({{answer.like}})</button><button {{action 'dislikeAnswer' answer}} class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-download"> </span> dislike ({{answer.dislike}})</button>
       </div>
     </div>
   </div>
